# BetterPass

./: LICENSE  README.md  pyproject.toml  setup.cfg
betterpass/: __init__.py  betterpass.py
tests/: test_main.py
