[metadata]
name = betterpass
version = 0.1.0
description = Cross-platform password input handler with masking
long_description = file: README.md
long_description_content_type = text/markdown
author = Kars1996
author_email = k@kars.bio
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
